queXS 1.9.0 - Changes since 1.8.0

New Feature: Supervisor chat via XMPP/Jabber (allow interviewers to chat with a supervisor from the interviewer screen)
New Feature: Set downloading VoIP client as the default
Fixed Bug: Server overloads when downloading VoIP client if temporary directory not writeable
Translations: Updated Czech translation - Thank you!

Database updates:

ALTER TABLE `operator` ADD `chat_enable` TINYINT( 1 ) NULL DEFAULT '0',
ADD `chat_user` VARCHAR( 255 ) NULL ,
ADD `chat_password` VARCHAR( 255 ) NULL ;

queXS 1.8.0 - Changes since 1.7.6

New Feature: Allow for restricting the view of sample variables to operators
New Feature: Case status and assignment page allowing to view the current status of cases by questionnaire, and allow for the manual assigning to operators if required

Database updates:

CREATE TABLE IF NOT EXISTS `case_queue` (
  `case_queue_id` bigint(20) NOT NULL AUTO_INCREMENT,
  `case_id` bigint(20) NOT NULL,
  `operator_id` bigint(20) NOT NULL,
  `sortorder` int(11) NOT NULL,
  PRIMARY KEY (`case_queue_id`),
  UNIQUE KEY `case_id` (`case_id`),
  KEY `operator_id` (`operator_id`)
) ENGINE=InnoDB  DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;

CREATE TABLE IF NOT EXISTS `sample_import_var_restrict` (
  `sample_import_id` bigint(20) NOT NULL,
  `var` char(128) collate utf8_unicode_ci NOT NULL,
  `restrict` tinyint(1) NOT NULL default '0',
  PRIMARY KEY  (`sample_import_id`,`var`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;

queXS 1.7.6 - Changes since 1.7.5

Fixed Bug: Define operator skills as for the assigning of cases to operators
Fixed Bug: Define availability group as for respondent
Fixed Bug: Add description of shift defining process and label year and week of year
Fixed Bug: Add message about missing sample if sample not assigned 
Fixed Bug: Don't display overall stats unless explicitly selected